main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

body {
    background: linear-gradient(to right, teal, #2a2f38);
}

.app {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.calculator {
    background-color: #1d2026;
    width: 100%;
    max-width: 375px;
    min-height: 640px;
    display: flex;
    flex-direction: column;
    border-radius: 1.5rem;
    overflow: hidden;
    box-shadow: -10px 16px teal;
    
}

.display {
    min-height: 200px;
    padding: 1.5rem;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    color: white;
    text-align: right;
    flex: 1 1 0%;
    
}

.display .input {
    font-size: 1.3rem;
    margin-bottom: 0.5rem;
    background-color: #292D36;
    padding: 10px;
    border-radius: 10%;
}

.display .output {
    font-size: 3rem;
    font-weight: 700;
    max-width: 100%;
    overflow: auto;
    width: 100%;
}

.display .operator {
    color: #EB6666;
}

.display .brackets, .display .percent{
    color: #06a67e;
}

.keys {
    background-color: #292D36;
    padding: 1rem;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(5, 1fr);
    gap: 1rem;
    box-shadow: 0px, -2px, 20px rgba(0, 0 , 0, 0.2);
}

.keys .key{
    position: relative;
    cursor: pointer;
    display: block;
    height: 0;
    padding-top: 100%;
    background-color: #262933;
    border-radius: 1rem;
    transition: 0.2s;
    user-select: none;
    box-shadow: 5px -5px rgb(3, 102, 102);
}

.keys .key span {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 1.9rem;
    font-weight: 700;
    color: wheat;
}

.keys .key:hover {
    box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.2);
}

.keys .key.operator span{
    color: #EB6666;
}

.keys .key.action span {
    color: #179a79;
}

